# codex_data_analysis_0420

./: README.md  build_faculty_intel.py  build_foundation_intel.py  faculty_intel.csv  founation_intel.csv  pyproject.toml
data/: smoke_test.csv
docs/: merge-conflict-resolution.md
src/foundation_intel/: build_dataset.py
tests/: test_parse_qualifying_grants.py
